--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
       with:
         aws-access-key-id     : ${{ secrets.MY_AWS_ACCESS_KEY }}
         aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
-        aws-region            : ${{ env.AWS_REGIOIN_NAME }}
+        aws-region            : ${{ env.AWS_REGION_NAME }}
         
     - name: Create new Elastic Beanstalk application version
       run : |
