--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,31 +40,31 @@ jobs:
        run : echo "CI Pileline part finished successfully!"
        
      
-  my_cd_part:
-    runs-on : ubuntu-latest
-    needs   : [my_ci_part]
+#   my_cd_part:
+#     runs-on : ubuntu-latest
+#     needs   : [my_ci_part]
     
-    steps: 
-    - name : Configure my AWS Credentials
-      uses : aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id     : ${{ secrets.MY_AWS_ACCESS_KEY }}
-        aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
-        aws-region            : ${{ env.AWS_REGION_NAME }}
+#     steps: 
+#     - name : Configure my AWS Credentials
+#       uses : aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id     : ${{ secrets.MY_AWS_ACCESS_KEY }}
+#         aws-secret-access-key : ${{ secrets.MY_AWS_SECRET_KEY }}
+#         aws-region            : ${{ env.AWS_REGION_NAME }}
         
-    - name: Create new Elastic Beanstalk application version
-      run : |
-       aws elasticbeanstalk create-application-version \
-       --application-name ${{ env.EB_APPLICATION_NAME }} \
-       --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}", S3Key="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}" \
-       --version-label "Ver-${{ github.sha  }}" \
-       --description "CommitSHA-${{ github.sha }}"
+#     - name: Create new Elastic Beanstalk application version
+#       run : |
+#        aws elasticbeanstalk create-application-version \
+#        --application-name ${{ env.EB_APPLICATION_NAME }} \
+#        --source-bundle S3Bucket="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}", S3Key="${{ env.EB_PACKAGE_S3_BUCKET_NAME }}" \
+#        --version-label "Ver-${{ github.sha  }}" \
+#        --description "CommitSHA-${{ github.sha }}"
        
-    - name: Deploy new Elastic Beanstalk application version
-      run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha  }}"
+#     - name: Deploy new Elastic Beanstalk application version
+#       run : aws elasticbeanstalk update-environment --environment-name ${{ env.EB_ENVIRONMENT_NAME }} --version-label "Ver-${{ github.sha  }}"
       
-    - name: Print happy message for CD finish
-      run : echo "CD Pipeline part finished successfully!"
+#     - name: Print happy message for CD finish
+#       run : echo "CD Pipeline part finished successfully!"
        
        
        
