--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ env:
   EB_APPLICATION_NAME       : "GitHub-Actions-Elastic-Beanstalk"
   EB_ENVIRONMENT_NAME       : "GitHub-Actions-Elastic-Beanstalk-env"
   DEPLOY_PACKAGE_NAME       : "flask_app_${{ github.sha }}.zip"
-  AWS_REGION_NAME           : "eu-north-1"
+  AWS_REGION_NAME           : "eu-central-1"
 
 on:
   push:
