--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 
 name: CI-CD-Pipelina-to-AWS-ElasticBeanstalk
 env:
-  EB_PACKAGE_S3_BUCKET_NAME : "bucket-github-actions-test"
+  EB_PACKAGE_S3_BUCKET_NAME : "github-test-actions-aws"
   EB_APPLICATION_NAME       : "GitHub-Actions-Elastic-Beanstalk"
   EB_ENVIRONMENT_NAME       : "GitHub-Actions-Elastic-Beanstalk-env"
   DEPLOY_PACKAGE_NAME       : "flask_app_${{ github.sha }}.zip"
