--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ env:
   EB_PACKAGE_S3_BUCKET_NAME : "github-test-actions-aws"
   EB_APPLICATION_NAME       : "GitHub-Actions-Elastic-Beanstalk"
   EB_ENVIRONMENT_NAME       : "GitHub-Actions-Elastic-Beanstalk-env"
-  DEPLOY_PACKAGE_NAME       : "flask_app_${{ github.sha }}.zip"
+  DEPLOY_PACKAGE_NAME       : "deploy_package_name_${{ github.sha }}.zip"
   AWS_REGION_NAME           : "eu-central-1"
 
 on:
