--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
        uses: actions/checkout@v3
        
 #      - name: Create ZIP deployment package
-#        run : zip -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
+#        run : jar -r ${{ env.DEPLOY_PACKAGE_NAME }} ./ -x *.git*
 
      - name: Set up JDK 
        uses: actions/setup-java@v3
