--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-     - name: Praverka vetki]
-       uses: actions/chechout@v2
+#      - name: Praverka vetki]
+     - uses: actions/chechout@v2
        
      - name: Run a one-line script 
        run : env
