--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,18 +6,29 @@ on:
       branches:
            - master
            
-         
 jobs: 
   build: 
     runs-on: ubuntu-latest
     
     steps:
-#      - name: Praverka vetki]
-     - uses: actions/checkout@v2
+     - name: Step 1 - Checkout main branch from GitHub
+       uses: actions/checkout@v2
        
-     - name: Run a one-line script 
+     - name: Step 2 - Set up JDK 17 
+       uses: actions/setup-java@v1
+       with: 
+          java version: 17
+       
+     - name: Step 3 - Have GitHub actions build maven project 
+       run : mvn -B package --file pom.mxl
+       
+     - name: Step 4 - Sey up a cache for Maven  
+       uses: actions/cache@v2
+       with:
+         path: ~/.m2
+         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+         restore-keys: ${{ runner.os }}-m2 
+       
+     - name: Step 5 - List the environment variables 
        run : env
        
-     - name: Run a multi-lina scripts
-       run : |
-         echo Nothing to see in the multi-script
