--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
      - name: Step 2 - Set up JDK 17 
        uses: actions/setup-java@v1
        with: 
-          java version: 17
+          java version: '17'
        
      - name: Step 3 - Have GitHub actions build maven project 
        run : mvn -B package --file pom.mxl
