--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '17'
        
      - name: Step 3 - Have GitHub actions build maven project
-       run : mvn -B package --file pom.xml
+       run : mvn -DskipTests clean install
        
      - name: Step 4 - Sey up a cache for Maven  
        uses: actions/cache@v2
