--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,10 @@ name: Deployment
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - master
+#   pull_request:
+#     branches:
+#       - main
 jobs:
   build:
     name: Build
