--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: target/tweet_scheduler-0.0.1-SNAPSHOT.jar   
+          path: target/jar-file-0.0.1-SNAPSHOT.jar   
           
   deploy:
     needs: build
@@ -41,8 +41,8 @@ jobs:
           aws_secret_key: ${{ secrets.MY_AWS_ACCESS_KEY }}
           #aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
           use_existing_version_if_available: false
-          application_name: autocluck
-          environment_name: Autocluck-env
+          application_name: github-ci-cd
+          environment_name: Githubcicd-env
           version_label: ${{github.SHA}}
-          region: us-east-1
-          deployment_package: tweet_scheduler-0.0.1-SNAPSHOT.jar    
+          region: eu-central-1
+          deployment_package: jar-file-0.0.1-SNAPSHOT.jar    
