--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: target/jar-file-0.0.1-SNAPSHOT.jar 
+#           path: target/jar-file-0.0.1-SNAPSHOT.jar
+          path: target/jar-file.jar 
           
   deploy:
     needs: build
