--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         uses: einaregilsson/beanstalk-deploy@v13
         with:
           aws_access_key: ${{ secrets.MY_AWS_ACCESS_KEY }}
-          aws_secret_key: ${{ secrets.MY_AWS_ACCESS_KEY }}
+          aws_secret_key: ${{ secrets.MY_AWS_SECRET_KEY }}
           #aws_session_token: ${{ secrets.AWS_SESSION_TOKEN }}
           use_existing_version_if_available: false
           application_name: github-ci-cd
