--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-#           path: target/jar-file-0.0.1-SNAPSHOT.jar
-          path: target/jar-file.jar 
+          path: target/jar-file/cicd-0.0.1-SNAPSHOT.jar
+#           path: target/jar-file.jar 
           
   deploy:
     needs: build
@@ -46,4 +46,4 @@ jobs:
           environment_name: Githubcicd-env
           version_label: ${{github.SHA}}
           region: eu-central-1
-#           deployment_package: target  
+          deployment_package: cicd-0.0.1-SNAPSHOT.jar
