--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,10 +30,10 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-#       - name: Download JAR
-#         uses: actions/download-artifact@v2
-#         with:
-#           name: artifact
+      - name: Download JAR
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact
       #Deploy the artifact (JAR) into AWS Beanstalk
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v13
