--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: idea/dataSources/cicd-0.0.1-SNAPSHOT.jar
+          path: target/cicd-0.0.1-SNAPSHOT.jar
 #           path: target/jar-file.jar 
           
   deploy:
