--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: target/cicd-0.0.1-SNAPSHOT.jar
+          path: target/GitHub-actions-CI-CD-to-AWS-0.0.1-SNAPSHOT.jar
 #           path: target/jar-file.jar 
           
   deploy:
@@ -46,4 +46,4 @@ jobs:
           environment_name: Githubcicd-env
           version_label: ${{github.SHA}}
           region: eu-central-1
-          deployment_package: cicd-0.0.1-SNAPSHOT.jar
+          deployment_package: GitHub-actions-CI-CD-to-AWS-0.0.1-SNAPSHOT.jar
